--- a/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
@@ -103,6 +103,9 @@ randomLegendaryPermanent: "#cardQueryLegendaryPermanent##_cardName#"
 cardQueryLegendaryNonlandPermanent: "[_customQuery:t=legendary t!=instant t!=sorcery t!=land][#cotdCustomSearch#][_cardName:#_cardName1#][_legendName:#_cardFamiliarName1#]"
 randomLegendaryNonlandPermanent: "#cardQueryLegendaryPermanent##_cardName#"
 
+cardQueryLegendaryCreature: "[_customQuery:t=legendary t=creature][#cotdCustomSearch#][_cardName:#_cardName1#][_legendName:#_cardFamiliarName1#]"
+randomLegendaryCreature: "#cardQueryLegendaryCreature##_cardName#"
+
 cardQueryLordCreature:
 - '[_customQuery:t=creature text=other text="creatures get" text!="?other creature" text!="?target creature" #_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]'
 - '[_customQuery:t=creature text=other text="creatures get" text!="?other creature" text!="?target creature" #_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]'
