--- a/src/data/grammar/images/mtg-comic.yaml
+++ b/src/data/grammar/images/mtg-comic.yaml
@@ -39,9 +39,43 @@ svgComicTextStyleLarge2:
   - "color: black; font-size:18px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600; word-wrap:break-all;"
 
 svgComicTemplate:
-  - "#svgComicTemplate1#"
-  - "#svgComicTemplate2#"
-  - "#svgComicTemplate3#"
+  # - "#svgComicTemplate1#"
+  # - "#svgComicTemplate2#"
+  # - "#svgComicTemplate3#"
+  - "#svgComicTemplate4#"
+
+
+svgComicTemplate4: >
+  [svgComicTemplateImageUrl:./data/images/comics/comic_template_4.jpg]
+  [svgComicTemplateWidth:800][svgComicTemplateHeight:1230]
+  [#svgComicTemplate4Content#]
+  [_text1x:65][_text1y:39][_text1w:158][_text1h:54]
+  [_text1Style:#_style1#][_text1Content:#_text1#]
+  [_text2x:156][_text2y:98][_text2w:186][_text2h:45][_text2Style:#_style2#][_text2Content:#_text2#]
+
+  [_text3x:540][_text3y:242][_text3w:197][_text3h:47][_text3Style:#_style3#][_text3Content:#_text3#]
+  [_text4x:341][_text4y:640][_text4w:206][_text4h:54][_text4Style:#_style4#][_text4Content:#_text4#]
+  [_text5Content:][_text6Content:][_text7Content:][_text8Content:]
+
+svgComicTemplate4NarrativeStyle1:
+  - "color: black; font-size: 12px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600;  word-wrap:break-all;"
+svgComicTemplate4NarrativeStyle2:
+  - "color: black; font-size: 12px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600;  word-wrap:break-all;"
+
+
+
+svgComicTemplate4Content:
+  - "[_pet:#animal#][_gotta:Gotta,I need to,Time to,Have to,Supposed to,Really should][_meal:Dinner,Lunch,Meal,Supper,Snack][_my:My,The][_hungry:hungry,starving,famished][_are:are,must be,are probably][_style1:#svgComicTemplate4NarrativeStyle1#][_food:food,chow,chow,grub,snacks,kibble,treats][_elipsis:...,...,.][_text1text:#_gotta# feed my #_pet.s#,#_meal# time,#_my# #_pet.s# #_are# #_hungry#][_text1:#_text1text##_elipsis#][_style2:#svgComicTemplate4NarrativeStyle2#][_text2:But I'm all out of #_pet# chow.][_style3:#svgComicTemplate4NarrativeStyle#][_text3:ridiculously #adj#.][_style4:#svgComicTextStyle3#][_text4:And I plan on finding out what that is.]"
+  # - "[_style1:#svgComicTextStyle3#][_text1:Are you here to tell me what a bad eugoogoolizer I am? ][_style2:#svgComicTextStyle2#][_text2:A eugoogoolizer...][_style3:#svgComicTextStyle2#][_text3:one who speaks at funerals.][_style4:#svgComicTextStyle5#][_text4: Or did you think I was too stupid to know what a eugoogoly was?]"
+  # - "[_style1:#svgComicTextStyle1#][_text1:#abstractNoun#...][_style2:#svgComicTextStyle2#][_xness:#nounStateOfBeing#][_text2:Is the essence of #_xness#. And][_style3:#svgComicTextStyle2#][_text3:#_xness#...][_style4:#svgComicTextStyle2#][_ofWhat:#abstractNounMassNounOrEmotion#,#abstractMassOrPluralNounGameConceptOrEmotion#,#pluralNounOrMassNoun#][_opinion:love,hate,fear,know][_whoDoesWhat:#planeswalkerFirstName# #_opinion.s#,#creatureTypes.s# #_opinion#,#historicalFigure# #_opinion.s#,#person# #_opinion.s#][_text4:is the essence of #_ofWhat#.,is what #_whoDoesWhat# most.]"
+  # - "[_style1:#svgComicTextStyle2#][_text1:Wait a minute. I might just have an idea.][_style2:#svgComicTextStyle2#][_text2:They'll be looking for us at #characterFirstName#'s‚ right?][_style3:#svgComicTextStyle3#][_text3:But they won't be looking for...][_style4:#svgComicTextStyle1#][_who:not us,#anyCharacter#,#historicalFigure#,#person#, three #adj# #creatureTypeOrCharacterClass.s#, three #characterClass.s# in #creatureTypes.a# suit][_text4:...#_who#.]"
+  # - "[_style1:#svgComicTextStyle1#][_toWhat:read,#verbIntransitive#][_inWhere:inside the building,inside the #placeNoun#][_text1:How can we be expected][_style2:#svgComicTextStyle1#][_text2:to teach children how to #_toWhat#][_style3:#svgComicTextStyle1#][_text3:if they can't even...][_style4:#svgComicTextStyle2#][_text4:fit #_inWhere#?]"
+  # - "[_style1:#svgComicTextStyle1#][_text1:What is this?][_style2:#svgComicTextStyle1#][_text2:...][_style3:#svgComicTextStyle1#][_text3: #placeNoun.a#...][_style4:#svgComicTextStyle1#][_who:ants,#creatureTypes.s#][_text4:for #_who#?]"
+  # - "[_style1:#svgComicTextStyle3#][_adj:cool,#adj#][_forWhat:for school,for #storyLocation#,to #verbStrictlyIntransitive#,to #verbStrictlyTransitive# me][_text1:You think that you're too #_adj# #_forWhat#...][_style2:#svgComicTextStyle1#][_text2:but I have a news flash for you‚][_style3:#svgComicTextStyle1#][_text3:#historicalFigure#,#anyCharacter#...][_style4:#svgComicTextStyle1#][_text4:...you aren't.]"
+  # - "[_style1:#svgComicTextStyle1#][_do:go pee,go #verbStrictlyIntransitive#,#verbStrictlyIntransitive#,stop #verbIntransitiveGerund#][_text1:Look‚ I gotta #_do#.][_style2:#svgComicTextStyle2#][_text2:but I'd really like to continue][_style3:#svgComicTextStyle3#][_aboutWhat:this conversation,#creatureTypes.s#,#abstractMassOrPluralNounGameConceptOrEmotion#][_text3:talking about #_aboutWhat#][_style4:#svgComicTextStyle1#][_whenWhat:when I come back,when #character# gets here,on #occasion#][_text4:...#_whenWhat#.]"
+  # - "[_style1:#svgComicTextStyle3#][_wereLike:brothers,#characterClass.s#,#itemNoun.s#,#adj#][_like:#_wereLike#][_text1:#characterFirstName##comma# #characterFirstName##comma# and #characterFirstName# were like #_like# to me.][_style2:#svgComicTextStyle3#][_text2:And when I say #_like# I don't mean‚ like‚ actually #_like#.][_people:black people,#adj# people,#creatureTypes.s#][_style3:#svgComicTextStyle3#][_text3: I mean it like the way #_people# use it.][_style4:#svgComicTextStyle3#][_more:more meaningful,#adjComparative#,#adjComparative#][_text4:Which is #_more#‚ I think.]"
+
+# ==========================================================
 
 svgComicTemplate1: >
   [svgComicTemplateImageUrl:./data/images/comics/comic_template_1.jpg]
