comic #4: saving work

--- a/src/data/grammar/vocab/misc-people.yaml
+++ b/src/data/grammar/vocab/misc-people.yaml
@@ -97,6 +97,7 @@ firstName:
 - Ziggy
 - Guy
 - Napoleon
+- Carlton
 
 genericNickname:
 - Stubby
@@ -151,6 +152,14 @@ genericNickname:
 - Precious
 - Squiggy
 - Fancy Pants
+- Buttercup
+- Gumdrop
+- Clementine
+- Petunia
+- Lulu
+- Samson
+- Jonesy
+- Gizmo
 
 someGuyOrGal: 
 - guy
