comic #4: saving work

--- a/src/data/grammar/vocab/misc-people.yaml
+++ b/src/data/grammar/vocab/misc-people.yaml
@@ -187,3 +187,15 @@ personPejorative:
 - clown
 - genius
 - fool
+- klutz
+- dweeb
+
+termOfEndearment:
+- dear
+- sweetheart
+- my love
+- honeybunch
+- darling
+- pumpkin
+- baby
+- lambchop
