--- a/src/data/grammar/vocab/misc-people.yaml
+++ b/src/data/grammar/vocab/misc-people.yaml
@@ -190,6 +190,15 @@ personPejorative:
 - klutz
 - dweeb
 
+personPejorativeAffectionate: 
+- weirdo
+- goofus
+- klutz
+- dweeb
+- goofball
+- dummy
+- monkey
+
 termOfEndearment:
 - dear
 - sweetheart
