--- a/src/data/grammar/vocab/misc-people.yaml
+++ b/src/data/grammar/vocab/misc-people.yaml
@@ -199,6 +199,11 @@ personPejorativeAffectionate:
 - dummy
 - monkey
 
+personPejorativeAny:
+- "#personPejorative#"
+- "#personPejorative#"
+- "#personPejorativeAffectionate#"
+
 termOfEndearment:
 - dear
 - sweetheart
