--- a/src/data/grammar/images/mtg-comic.yaml
+++ b/src/data/grammar/images/mtg-comic.yaml
@@ -49,7 +49,7 @@ svgComicTemplate4: >
   [svgComicTemplateImageUrl:./data/images/comics/comic_template_4.jpg]
   [svgComicTemplateWidth:800][svgComicTemplateHeight:1230]
   [#svgComicTemplate4Content#]
-  [_text1x:63][_text1y:33][_text1w:160][_text1h:54]
+  [_text1x:63][_text1y:28][_text1w:157][_text1h:54]
   [_text1Style:#_style1#][_text1Content:#_text1#]
   [_text2x:156][_text2y:98][_text2w:186][_text2h:45][_text2Style:#_style2#][_text2Content:#_text2#]
   [_text3x:533][_text3y:234][_text3w:215][_text3h:58][_text3Style:#_style3#][_text3Content:#_text3#]
@@ -57,9 +57,8 @@ svgComicTemplate4: >
   [_text5x:146][_text5y:433][_text5w:134][_text5h:70][_text5Style:#_style5#][_text5Content:#_text5#]
   [_text6x:524][_text6y:450][_text6w:151][_text6h:56][_text6Style:#_style6#][_text6Content:#_text6#]
   [_text7x:615][_text7y:543][_text7w:140][_text7h:112][_text7Style:#_style7#][_text7Content:#_text7#]
-  [_text8x:357][_text8y:730][_text8w:89][_text8h:76][_text8Style:#_style8#][_text8Content:#_text8#]
-
-  [_text6Content:][_text7Content:][_text8Content:]
+  [_text8x:342][_text8y:726][_text8w:113][_text8h:87][_text8Style:#_style8#][_text8Content:#_text8#]
+  [_text6Content:][_text7Content:]  
 
 svgComicTemplate4NarrativeStyle1:
   - "color: black; font-size: 12px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600; word-wrap:break-all;"
@@ -71,23 +70,67 @@ svgComicTemplate4NarrativeStyle4:
   - "color: black; font-size: 10px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600; word-wrap:break-all;"
 
 
+
 svgComicTemplate4Style1:
   - "color: black; font-size: 11px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600;  word-wrap:break-all;"
 svgComicTemplate4Style2:
   - "color: black; font-size: 10.5px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600;  word-wrap:break-all;"
 svgComicTemplate4Style3:
   - "color: black; font-size: 10px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600;  word-wrap:break-all;"
+svgComicTemplate4Style4:
+  - "color: black; font-size: 9px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600;  word-wrap:break-all;"
+svgComicTemplate4Style1Bigger1:
+  - "color: black; font-size: 13px; font-family: Anime Ace, Comic Sans, Sans-Serif; font-weight: 600;  word-wrap:break-all;"
 
 svgComicTemplate4Content:
   - "[#svgComicTemplate4ContentInit#]#svgComicTemplate4Content_a#"
 
-svgComicTemplate4ContentInit: "[_pet:#animal#][_pet1:#genericNickname#][_pet2:#genericNickname#][_elipsisOrPeriod:...,...,.]"
+svgComicTemplate4ContentInit: "[_pet:#animal#][_pet1:#genericNickname#][_pet2:#genericNickname#][_otherCharacterOption:#_familyMemberAddress#,#_familyMemberAddress#,#_familyMemberAddress#,#planeswalkerFirstName#][_otherCharacter:#_otherCharacterOption#][_elipsisOrPeriod:...,...,.][_questPeriod:?,.][_commaPeriod:#comma#,.][_commaPeriodColon:#comma#,.,#colon#][_commaColon:#comma#,#colon#]"
 
-svgComicTemplate4Content_a: "[_text1:#svgComicTemplate4Content1a#][_text2:#_part2#][_text3:#_part3#][_text4:#svgComicTemplate4Content4a#][_text5:#_part5#]"
+svgComicTemplate4Content_a: "[_text1:#svgComicTemplate4Content1a#][_text2:#_part2#][_text3:#_part3#][_text4:#svgComicTemplate4Content4a#][_text5:#_part5#][_text8:#svgComicTemplate4Content8a#]"
 
 svgComicTemplate4Content1a:
 - "#svgComicTemplate4Content1a_slingBlade#"
 - "#svgComicTemplate4Content1a_feedingTime#"
+
+svgComicTemplate4Content8a: "[_style8:#svgComicTemplate4Style2#]#svgComicTemplate4Content8a_textContent#"
+
+_everyoneAddress:
+- everyone
+- everyone
+- folks
+- chaps
+- my friends
+- gang
+- y'all
+
+svgComicTemplate4Content8a_textContent_intro:
+- "[_doesAnyone:does anyone][_hasAnyone:has anyone][_listenUp:Listen up,Attention,Okay,Everyone listen up][_friends:,friends,dudes,peeps,dogs,neighbors][_folks:,,,, people, folks, you #personPejorativeAny.s#, #_friends#, my #_friends#]#_listenUp##_folks##_commaPeriod#"
+- "[_doesAnyone:does anyone][_hasAnyone:has anyone][_hello:Hello,Howdy,Hey,Listen]#_hello##_commaPeriod#"
+- "[_doesAnyone:does anyone][_hasAnyone:has anyone][_sorry:sorry,apologies,my bad,heads up][_sorryPunct:,#comma#][_apologies:#_sorry##_sorryPunct# #_everyoneAddress#][_punct:#comma#,#comma#,#colon#,.,...]#_apologies##_punct#"
+- "[_doesAnyone:do you][_hasAnyone:have you][_otherCharPunct:#comma#,#colon#,?,!,...]#_otherCharacter##_otherCharPunct#"
+
+svgComicTemplate4Content8a_textContent_admission: "[_intro:#svgComicTemplate4Content8a_textContent_intro#][_admission:#svgComicTemplate4Content8a_textContent_listenUp#][_listen:,#_intro# ,#_intro# ]#_listen##_admission#"
+
+svgComicTemplate4Content8a_textContent:
+- "#svgComicTemplate4Content8a_textContent_admission#"
+- "#svgComicTemplate4Content8a_textContent_admission#"
+# - "[_style8:#svgComicTemplate4Style1Bigger1#]Can. You. Dig it?"
+- "[_okay:Okay,Alright,Wait,Welp][_every:everyone,everybody][_none:no one,nobody][_beAlarmedEverybody:remain calm,stay cool][_beAlarmedNobody:be alarmed,freak out,get #mood#][_warning:#_every# #_beAlarmedEverybody#,#_none# #_beAlarmedNobody#,#_every# #_beAlarmedNobody#]#_okay#, #_warning#."
+
+# TODO: seed Panel 7 with #_admit# for appropriate rules choices (e.g. Panel 7:"Confession Time." Panel 8:"I may have accidentally just cast Overrun.")
+
+svgComicTemplate4Content8a_textContent_listenUp:
+- "[_haveAny:have any,know where I can find some][_anywhere:anywhere,somewhere,some place][_here:,, around here, in town, hereabouts, nearby][_goodPlace:a good place to,#_anywhere# I can,#_anywhere# to][_some:, some, some][_lookingFor:#_doesAnyone# #_haveAny#,I'm looking for#_some#,Where can I get#_some#,is there a good place#_here# to buy][_food:food,chow,chow,grub,snacks,treats][_otherThing:#itemNoun#,#nounWeapon#,#clothingOrAccessory#][_quarry:#_pet# food,#_pet# #_food#,#massNoun#,#_otherThing.s#][_qp:?,#_questPeriod#]#_lookingFor# #_quarry##_qp#"
+- "#_hasAnyone.capitalize# seen my [_clothDesc:#adjColorAny#,#adjColorOrTexture#]#_clothDesc# #clothingOrAccessory#?"
+- "I'm [_feeling:,feeling ,really ,strangely ][_mood:#mood#][_being:being,feeling][_pref:hate,don't like,never liked,I'm not used to][_feelingMood:#_feeling# #_mood#][_now:, right now, all of a sudden, for some reason,. I #_pref# #_being# #_feelingMood#]#_feelingMood##_now#."
+- "[_mayHave:may have,might have,think I might have][_lock:lock,latch][_pen:pen,enclosure,corral,room][_accidentally:accidentally][_forgotten:forgotten,neglected,failed][_development:#_forgotten# to shower,#_forgotten# to put on deodorant,#_forgotten# to #_lock# the #_pet# #_pen#,#_forgotten# to feed the #_pet.s#,#_accidentally# summoned #_svgComicTemplate4_cardsearch_summoned#]I #_mayHave# #_development#."
+- "[_admit:Full disclosure#comma#,My bad#comma#,Confession time#_commaPeriodColon#,I should warn you#_commaPeriod#,apologies everyone#comma#][_intro:,#_admit# ,#_admit# ][_style8:#svgComicTemplate4Style3#][_mayHave:may have,think I,might have][_lock:lock,latch][_pen:pen,enclosure,corral,room][_accidentally:accidentally][_forgotten:#_accidentally# just cast #_svgComicTemplate4_cardsearch_overrunCard#][_development:#_forgotten#]I #_mayHave# #_development#."
+
+_svgComicTemplate4_cardsearch_summoned: "[_type:demon,demon,demon,eldrazi,horror][_customQuery:t=legendary t=demon][#_customQuery.cardSearchCustomQuery(1)#][_whoSummoned:#_cardFamiliarName1#,the baloths,#_pet1# and #_pet2#,the #_pet.s#]#_whoSummoned#"
+
+_svgComicTemplate4_cardsearch_overrunCard: '[_customQuery:color=g t~=instant t|=sorcery text~="creatures you control get" text|="creatures you control gain" text|="counters on each" text|="gain trample" text|="beast creature token"][#_customQuery.cardSearchCustomQuery(1)#]#_cardName1#'
+
 
 svgComicTemplate4_waterAdj:
 - cold
@@ -109,12 +152,12 @@ svgComicTemplate4_waterAdj:
 svgComicTemplate4Content1a_slingBlade: "[_style1:#svgComicTemplate4NarrativeStyle1#][_style2:#svgComicTemplate4NarrativeStyle2#][_style3:#svgComicTemplate4NarrativeStyle2#]#svgComicTemplate4Content1a_slingBlade_textContent#"
 
 svgComicTemplate4Content1a_slingBlade_bridge:
-- "bridge[_inOn:on]"
+- "[_inOn:on]bridge"
 - "#placeNoun#"
 
 svgComicTemplate4Content1a_slingBlade_textContent:
 - "[_hungry:hungry,famished,peckish][_realization:I'm awful #_hungry#,I'm feelin' #_hungry#,Startin' to get #_hungry#,Stomach's rumblin','bout suppertime,Worked me up an appetite,Awful hot out today]#_realization#.[#svgComicTemplate4Content1a_slingBlade_part2sand3#]"
-- "[_water:water,river,#liquid#,#massNoun#][_theWater:#_water#][_bridge:#svgComicTemplate4Content1a_slingBlade_bridge.a#]Two fellers standin' #_inOn# #_bridge#.[_fellerSays:feller says#comma# the #_theWater#'s][_part2:One #_fellerSays# #svgComicTemplate4_waterAdj#.][_comeFrom:come from #randomMtgLocation#,was #creatureTypeOrCharacterClass.a#][_part3:The other #_fellerSays# #svgComicTemplate4_waterAdj#.,Get it?,I think the other feller #_comeFrom#.,#svgComicTemplate4Content1a_slingBlade_genericPart3#]"
+- "[_water:water,river,#liquid#,#massNoun#][_theWater:#_water#][_bridge:#svgComicTemplate4Content1a_slingBlade_bridge#][_standing:standin',standin',sittin']Two fellers #_standing# #_inOn# #_bridge.a#.[_fellerSays:feller says#comma# the #_theWater#'s][_part2:One #_fellerSays# #svgComicTemplate4_waterAdj#.][_comeFrom:come from #randomMtgLocation#,was #creatureTypeOrCharacterClass.a#][_part3:The other #_fellerSays# #svgComicTemplate4_waterAdj#.,Get it?,I think the other feller #_comeFrom#.,#svgComicTemplate4Content1a_slingBlade_genericPart3#]"
 - "[_badOption:bad,untoward,sad,good,scary,nasty][_bad:#_badOption#][_ward:children,#animalSmall.s#,#animal.s#,#planeswalkerFirstName#][_deserving:#creatureTypeOrCharacterClass.s#,people who's #adjPersonCharacteristic#][_style1:#svgComicTemplate4NarrativeStyle4#]I don't think anything #_bad# ought to happen to #_ward#.[_style2:#svgComicTemplate4NarrativeStyle4#][_happen:only happen to,be saved up for][_part2:All the #_bad# stuff should #_happen# #_deserving#.][_part3:That's the way I see it.,#svgComicTemplate4Content1a_slingBlade_genericPart3#]"
 
 svgComicTemplate4Content1a_slingBladeFood:
@@ -165,7 +208,7 @@ svgComicTemplate4Content3a_textContent:
 - "I guess I'd better go into town before the #_theStore# closes."
 - "[_timeHour:5,6,7,8][_closingTime:#_timeHour# o'clock,#_timeHour##colon#30]What time does the #_theStore# close?<br/>#_closingTime#?"
 - "[_obsessed:Gotta get to the #_theStore#,Goin' to the #_theStore#,Time to go to the #_store.capitalize#][_storeObessesed:#_obsessed##_punct#,♫ #_obsessed# ♫]#_storeObessesed#"
-- "[_otherCharacter:#_familyMemberAddress#,#_familyMemberAddress#,#_familyMemberAddress#,#planeswalkerFirstName#][_so:,so ][_mad:mad,cross,angry,#mood#][_when:,, again, this time][_flipOut:flip out,go ape,freak out,be home soon,take my #itemNoun# away#_when#][_goingTo:going to,going to,gonna][_predictionFear:can't find out about this,is #_goingTo# chew my #bodypartsInPairs# off,is not going to be happy,will have my #bodypart# for this][_prediction:is #_goingTo# be #_so##_mad#,is #_goingTo# #_flipOut#,#_predictionFear#]#_otherCharacter# #_prediction##_punct#"
+- "[_so:,so ][_mad:mad,cross,angry,#mood#][_when:,, again, this time][_flipOut:flip out,go ape,freak out,be home soon,take my #itemNoun# away#_when#][_goingTo:going to,going to,gonna][_predictionFear:can't find out about this,is #_goingTo# chew my #bodypartsInPairs# off,is not going to be happy,will have my #bodypart# for this][_prediction:is #_goingTo# be #_so##_mad#,is #_goingTo# #_flipOut#,#_predictionFear#]#_otherCharacter# #_prediction##_punct#"
 - "[_time:Time to,I guess I'd better,So I gottta][_time:Time to,I guess I'd better,So I gottta][_scareUp:scare up,go find,go look for,bag,snag,forage for,round up][_again:,, again, now][_getFood:#_time# #_scareUp# some #_food##_again#]#_getFood#."
 
 svgComicTemplate4Content4a:
@@ -198,7 +241,7 @@ svgComicTemplate4Content5a_reply_textContent:
 - "[_makeScene:make a scene,cause a scene,freak out,overreact,panic,get hysterical,throw a fit,make a big deal out of this][_noScene:Don't #_makeScene#,Let's not #_makeScene#,#_please# don't #_makeScene#,No reason to #_makeScene#][_does:does,gets like][_textContent:I hate it when he #_does# this.,#_noScene##_herName#.]#_textContent#"
 - "[_beSick:be sick,be ill,throw up,be naseous,pass out,cry,start screaming,just curl up into a ball][_peed:peed myself,threw up a little,soiled my breeches][_suddenly:,, all of a sudden, right now, just now][_sickRealization:I think I'm going to #_beSick#,I think I just #_peed#,I'm feeling dizzy,My #bodypartsInternalExternal# #_isAre# #adjBodySensation##_suddenly#]#_sickRealization#."
 - "[_style5:#svgComicTemplate4Style2#][_probably:Probably,Must be,I'll bet he's,I'll wager he's,With our luck#comma# he's]#_probably# here to feed his \"#_pet.s#\"."
-- "[_boy:boy,boy,kid,son][_kid:boy,kid][_garrukDescOther:#firstName# Wildspeaker's #_boy#,#firstName# Wildspeaker's #_boy#,the Wildspeaker #_kid#][_theLocal:The,Our local,The famous,The famous][_tamer:tamer,wrangler,whisperer,speaker,tamer,boy,speaker][_verber:#_tamer#,#nounVerber#][_tamerDesc:#_theLocal# \"#_pet.hyphenate#-#_verber#\" ][_garrukDesc:#_tamerDesc#,#_garrukDescOther#][_noDoubt:no doubt,it seems,I'm afraid,I'll wager,I think][_isAtIt:is at it,has lost it,is acting out,is lost,is confused,is off his meds,is in a mood]#_garrukDesc# #_isAtIt# again#_svgComicTemplate4Content5a_noDoubt#."
+- "[_boy:boy,boy,kid,son][_kid:boy,kid][_garrukDescOther:#firstName# Wildspeaker's #_boy#,#firstName# Wildspeaker's #_boy#,the Wildspeaker #_kid#][_theLocal:The,Our local,The famous,The famous][_tamer:tamer,wrangler,whisperer,speaker,tamer,boy,speaker,#nounVerber#][_tamerDesc:#_theLocal# \"#_pet.hyphenate#-#_tamer#\" ][_garrukDesc:#_tamerDesc#,#_garrukDescOther#][_noDoubt:no doubt,it seems,I'm afraid,I'll wager,I think][_isAtIt:is at it,has lost it,is acting out,is lost,is confused,is off his meds,is in a mood]#_garrukDesc# #_isAtIt# again#_svgComicTemplate4Content5a_noDoubt#."
 
 # ==========================================================
 
